Cambiando condiciones generales

--- a/views/condiciones/travelclub.phtml
+++ b/views/condiciones/travelclub.phtml
@@ -1,35 +1,15 @@
-<center><span style='font-weight: bold;'>CONDICIONES GENERALES BLOQUEOS Y CHARTER (TRAVEL CLUB)</span></center><br />
-    <ul type='disc'>
-     <!-- <li>Los precios publicados incluyen solo lo especificado en cada programa. Los servicios no utilizados no ser&aacute;n reembolsables.</li>
-      <li>Una vez confirmada la       reserva, se solicitar&aacute; el pago total o un abono m&iacute;nimo de <strong>USD 450.- por pasajero para Sudam&eacute;rica, USD 650.-       Caribe, USA, Isla de Pascua,&nbsp; USD 1.200.-       Europa</strong>, &eacute;stos deben ser pagados dentro de las 48 horas de       recibida la confirmaci&oacute;n, de lo contrario se anular&aacute; la reserva       autom&aacute;ticamente.&nbsp; El saldo deber&aacute; ser pagado en su totalidad a m&aacute;s       tardar 10 d&iacute;as h&aacute;biles a contar del recibo del abono.&nbsp; En caso de       haberse confirmado la reserva 35 d&iacute;as antes de la salida, el pago deber&aacute;       ser total.&nbsp; </li> -->
-      <li><u>Bloqueos       a&eacute;reos: </u><br />
-    -No permiten  cambios ni correcciones de;&nbsp; fecha,  nombre, g&eacute;nero y rut.<br />
-      -No permite  reserva de asiento ni pre-chequeo, los asientos ser&aacute;n asignados por parte de la  compa&ntilde;&iacute;a a&eacute;rea en el momento del check in en el aeropuerto.<br />
-      -No permite  devoluci&oacute;n. <br />
-      -Los pasajes  ser&aacute;n entregados 7 d&iacute;as antes de la salida</li>
-      <li>Los gastos de anulaci&oacute;n de servicios terrestres, quedan  supeditados a las pol&iacute;ticas de los distintos hoteles y proveedores tur&iacute;sticos  involucrados en cada uno de los programas.</li>
-      <li><u>Charter</u>:<br />
-      </li>
-    -Permite  cambio de nombre hasta 5 d&iacute;as antes de la salida.&nbsp; No permite cambio de fecha.<br />
-    -Los asientos  son asignados por orden de fecha de compra y procurando que las familias queden  juntas.<br />
-      -Anulaciones  anterior<strong> 30  d&iacute;as de la salida, se retiene el equivalente al abono m&iacute;nimo</strong>.<br />
-      Entre 29 y 15 d&iacute;as antes de la  salida: 60% de penalidad sobre el valor total del programa. <br />
-      Entre 14 y 10 d&iacute;as antes de la  salida: 80% de penalidad sobre el valor del programa.<br />
-      Entre 9 y 0 d&iacute;as antes de la  salida: 100% de penalidad sobre el valor total del programa. <br />
-      En caso de no presentaci&oacute;n en el  aeropuerto o impedimento para salir del pa&iacute;s, no existir&aacute; ning&uacute;n tipo de  devoluci&oacute;n o cambio de fecha, por lo que se solicita chequear la documentaci&oacute;n  de viaje.
-    
-      <li>Los       cargos de seguridad y combustible son parte del valor del programa, por lo       tanto no tiene devoluci&oacute;n en caso de anulaci&oacute;n. Se encuentran sujetos a       variaci&oacute;n por parte de la cia. a&eacute;rea, &eacute;stos se congelan solamente con el       pago&nbsp;total del viaje.&nbsp; Las       tasas de embarque son 100% reembolsables.</li>
-     
-	 <!-- <li>Alojamiento:       Los horarios de check in y check out son fijados por cada hotel.&nbsp; En general las habitaciones est&aacute;n       disponibles para su ingreso a partir de las 15:00 hrs y la salida debe ser       antes de las 12:00 PM. Las salidas despu&eacute;s del horario establecido       facultan al hotel a cobrar un day use o bien una noche extra.</li>
-      <li>Las       excursiones regulares podr&iacute;an estar sujetas a modificaci&oacute;n en destino por       parte del operador local en d&iacute;a y horario por razones de operatividad u       otros motivos para la realizaci&oacute;n de las mismas, esto es informado       oportunamente por el operador en destino a los pasajeros. </li>
-      <li>Si por       motivos externos a la responsabilidad de Panamericana tales como:       condiciones clim&aacute;ticas, sismos, problemas pol&iacute;ticos, etc. Obligue a       modificar el programa y esto implique costos adicionales, &eacute;stos deben ser       asumidos por cuenta del pasajero.</li>
-      <li>Documentaci&oacute;n:       Es obligaci&oacute;n&nbsp;del pasajero contar con la documentaci&oacute;n de viaje al d&iacute;a       (C&eacute;dula de identidad, pasaportes, visados, autorizaciones notariales, etc.)       y de cualquier otro requisito necesarios para ingresar al lugar de destino       ya sea adulto o menor.&nbsp; </li>
-      <li>Panamericana       Turismo declina toda responsabilidad por cancelaciones, atrasos, cambios       de horarios y de fecha determinados por las aerol&iacute;neas.</li>
-      <li>Conocimiento       de condiciones, con la compra de un programa, queda autom&aacute;ticamente       establecido que el agente de viajes y cliente se notifican y aceptan todas       las condiciones generales para bloqueos y charter.</li> -->
-    </ul>
-
-
-
-
-
-
+<center>
+    <span style='font-weight: bold;'>CONDICIONES GENERALES</span>
+</center>
+<br />
+<ul type='disc'>
+    <li>Los precios publicados son por persona e incluyen solo lo especificado en cada programa. Los servicios no utilizados no ser&aacute;n reembolsables.</li>
+    <li>Los pasajes a&eacute;reos NO tienen devoluci&oacute;n y NO permiten cambios de fecha, nombre, g&eacute;nero ni rut.</li>
+    <li>Los gastos de anulaci&oacute;n de servicios terrestres, quedan supeditados a las pol&iacute;ticas de los distintos hoteles y proveedores tur&iacute;sticos involucrados en cada uno de los programas.  En per&iacute;odos de alta temporada, el costo de la anulaci&oacute;n corresponde al total de la estad&iacute;a.</li>
+    <li>Las habitaciones triples en algunos destinos y hoteles est&aacute;n compuestas por 2 camas matrimoniales, lo que obliga a compartir dichas camas.  </li>
+    <li>Los cargos a&eacute;reos son parte del valor del programa, por lo tanto no tienen devoluci&oacute;n en caso de anulaci&oacute;n. Se encuentran sujetos a variaci&oacute;n por parte de la cia. a&eacute;rea, &eacute;stos se congelan solamente con el pago total del viaje. Las tasas de embarque son determinadas por autoridades competentes y pueden cambiar su valor, son 100% reembolsables.</li>
+    <li>Los horarios de check in y check out son fijados por cada hotel.  En general las habitaciones est&aacute;n disponibles para su ingreso a partir de las 15:00 hrs y la salida debe ser antes de las 12:00 PM. Las salidas posteriores pueden significar cobros adicionales.</li>
+    <li>Es obligaci&oacute;n del pasajero contar con la documentaci&oacute;n de viaje al d&iacute;a (C&eacute;dula de identidad, pasaportes, visados, autorizaciones notariales, etc.) y de cualquier otro requisito necesarios para ingresar al lugar de destino ya sea adulto o menor.</li>
+    <li>Si por motivos externos a la responsabilidad de Panamericana tales como: condiciones clim&aacute;ticas, sismos, problemas pol&iacute;ticos, etc. obligue a modificar el programa y esto implique costos adicionales, &eacute;stos deben ser asumidos por cuenta del pasajero.</li>
+    <li>Panamericana Turismo declina toda responsabilidad por cancelaciones, atrasos, cambios de horarios y de fecha determinados por las aerol&iacute;neas.</li>
+</ul>
