Habilitando acceso al sitio online

--- a/views/login/login.phtml
+++ b/views/login/login.phtml
@@ -38,8 +38,7 @@
                             <div class="input-group">
                                 
                                 <span class="input-group-addon"><img src="<?php echo $_layoutParams['ruta_img']; ?>closed.png" width="16"></span>
-                                <input type="<?php if($this->estado=='web'){ echo 'password'; } else { echo 'hidden'; } ?>" class="form-control" id="password" name="txtUser" style="width: 90%" placeholder="C&oacute;digo">
-                                
+                                <input type="<?php if($this->estado=='web'){ echo 'password'; } else { echo 'password'; } ?>" class="form-control" id="password" name="txtUser" style="width: 90%" placeholder="C&oacute;digo">
                                 
                             </div>
                         </div>
