--- a/views/pago/busqueda.phtml
+++ b/views/pago/busqueda.phtml
@@ -1,4 +1,4 @@
-<div id="page-content" >
+<div id="page-content" style="margin-top:55px;">
     <div id='wrap'>
         <div id="page-heading">
             <ol class="breadcrumb">
@@ -10,12 +10,8 @@
         </div>
         <div class="container">
 
-            <div class="alert alert-dismissable alert-danger">
-                <h2><strong>&iexcl;PAGO RECHAZADO!</strong></h2>    
-                <br>
-                <img src="<?php echo $_layoutParams['ruta_img']; ?>error.png" align= "left" style="margin-right: 15px;">
-                <h4>Cont&aacute;ctese con su Agente de Viajes Travel Club</h4>
-                <h4><?php if (!$this->status) { echo $this->msj; } ?></h4>
+            <div class="alert alert-dismissable alert-warning">
+                Debe realizar una nueva busqueda.
             </div>
 
         </div>
