se cambia tamaño de modal en la vista de programas se cambian condiciones para que se vean desde un popover y se pasan categoria de los hoteles a las siguientes ventanas

--- a/views/programas/centerBox/detalleProg.phtml
+++ b/views/programas/centerBox/detalleProg.phtml
@@ -277,6 +277,7 @@ if($this->objOpcProgramas) {
                                         <?php echo htmlspecialchars(json_encode($DP_thHot)) ;?>,
                                         <?php echo htmlspecialchars(json_encode($DP_hoteles)) ;?>,
                                         <?php echo htmlspecialchars(json_encode($DP_planAl)) ;?>,
+                                        <?php echo htmlspecialchars(json_encode($DP_catHot));?>,
                                         '<?php echo$objOpcProg->getChd1();?>',
                                         '<?php echo$objOpcProg->getChd2();?>'           
                                        );"> RESERVAR 
