--- a/views/programas/centerBox/pasajeros.phtml
+++ b/views/programas/centerBox/pasajeros.phtml
@@ -1,155 +1,183 @@
 <form class="frmDetalleReserva_1_<?php echo $this->cntP; ?>">
     <div class="row">
-        <div class="col-md-3"></div><div class="col-md-6">
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            Seleccion
-        </div>
-        <div class="panel-body" style="padding-top: 0px;">
-            <table cellpadding="0" cellspacing="0" border="0" class="table-striped table-bordered" style="font-size:12px; width: 100%; margin-top: 20px;" align='center'>
-                <thead>
-                    <tr style="background-color:#34495e; color: #FFFFFF" role="row">
-                        <th role="columnheader" style="padding-left: 2px;">Programa</th>
-                        <th role="columnheader" style="padding-left: 2px;">Ciudad</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td style="padding: 2px; vertical-align: middle;height: 22px;width: 293px;">
-                         <?php echo Session::get('sess_nombrePrograma'); ?>
-                    </td>
-                    <td style="padding: 2px; vertical-align: middle;height: 22px;">
-                        <?php echo Session::get('sess_ciudadPrograma'); ?>
-                    </td>
-                    
-                </tr>
-                
-            </table>
-           
-            <table cellpadding="0" cellspacing="0" border="0" class=" table-striped table-bordered" style="font-size:12px; width: 100%; margin-top: 20px;" align='center'>
-            <thead>
-                    <tr style="background-color:#34495e; color: #FFFFFF" role="row">
-                        <th role="columnheader" style="padding-left: 2px; height: 3px;">Hotel</th>
-                        <th role="columnheader" style="padding-left: 2px; height: 3px;">Tipo Habitaci&oacute;n</th>
-                        <th role="columnheader" style="padding-left: 2px; height: 3px;">Plan Alimenticion</th>
-                    </tr>
-                </thead>
-                
-                <?php 
-                $i=0;
-                foreach ($this->hot as $val){
-                    
-                ?>
-                <tr>
-                    <td style="height: 22px;"><?php echo $val;?></td>
-                    <td style="height: 22px;"><?php echo $this->hab[$i];?></td>
-                    <td style="height: 22px;"><?php echo $this->plan[$i];?></td>
-                </tr>
-                <?php 
-                
-                
-                
-                }
-                ?>
-            </table>
-        </div>
-    </div>
-    </div>
-    </div>
-    <input type="hidden" name="hot"value="<?php echo htmlspecialchars(json_encode($this->hot));?>">
-    <input type="hidden" name="hab"value="<?php echo htmlspecialchars(json_encode($this->hab));?>">
-    <input type="hidden" name="plan"value="<?php echo htmlspecialchars(json_encode($this->plan));?>">
-    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" style="width:50%" align="center">
-        
-        <tr>
-            <td><span style="padding-left:10px;">Habitaci&oacute;n:</span></td>
-            <td>
-                <select name="DP_cmbHab" id="DP_cmbHab" class="form-control" onchange="habitaciones('<?php echo $this->cntP; ?>_DP_tblHab_B', this.value)">
-                    <option value="0">Seleccione</option>
-                    <?php for($i=1; $i<=3; $i++) { ?>
-                        <option value="<?php echo $i; ?>"><?php echo $i; ?></option>
-                    <?php } ?>
-                </select>
-            </td>
-        </tr>
 
-        <tr>
-            <td colspan="2">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Seleccion
+            </div>
+            <div class="panel-body" style="padding-top: 0px;">
+                <table cellpadding="0" cellspacing="0" border="0" class="table-striped table-bordered" style="font-size:12px; width: 100%; margin-top: 20px;" align='center'>
+                    <thead>
+                        <tr style="background-color:#34495e; color: #FFFFFF" role="row">
+                            <th role="columnheader" style="padding-left: 2px;">Programa</th>
+                            <th role="columnheader" style="padding-left: 2px;">Ciudad</th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td style="padding: 2px; vertical-align: middle;height: 22px;width: 50%;">
+                            <?php echo Session::get('sess_nombrePrograma'); ?>
+                        </td>
+                        <td style="padding: 2px; vertical-align: middle;height: 22px;">
+                            <?php echo Session::get('sess_ciudadPrograma'); ?>
+                        </td>
 
-            <?php for($i=1; $i<=3; $i++) { ?>
-                <div id="<?php echo $this->cntP; ?>_DP_tblHab_B_<?php echo $i; ?>" style="display:none;">
-                    <table width="100%" border="0" cellspacing="0" cellpadding="5">
-                        <tr><td colspan="4"><b>Habitaci&oacute;n <?php echo $i;?></b></td></tr>
+                    </tr>
+
+                </table>
+
+                <table cellpadding="0" cellspacing="0" border="0" class=" table-striped table-bordered" style="font-size:12px; width: 100%; margin-top: 20px; " align='center'>
+                    <thead>
+                        <tr style="background-color:#34495e; color: #FFFFFF" role="row">
+                            <th role="columnheader" style="padding-left: 2px; height: 3px;">Hotel</th>
+                            <th role="columnheader" style="padding-left: 2px; height: 3px;">Categoria</th>
+                            <th role="columnheader" style="padding-left: 2px; height: 3px;">Tipo Habitaci&oacute;n</th>
+                            <th role="columnheader" style="padding-left: 2px; height: 3px;">Plan Alimenticion</th>
+                        </tr>
+                    </thead>
+
+                    <?php
+                    $i = 0;
+                    
+                    foreach ($this->hot as $val) {
+                        ?>
                         <tr>
-                            <td>Adultos</td>
-                            <td>
-                                <select name="DP_cmbAdultos_<?php echo $i; ?>" id="DP_cmbAdultos_<?php echo $i; ?>">
-                                <?php for($x=1; $x<=3; $x++) { ?>
-                                    <option value="<?php echo $x; ?>"><?php echo $x; ?></option>
-                                <?php } ?>
-                                </select>
+                            <td style="height: 22px;"><?php echo $val; ?></td>
+                            <td style="height: 22px;">
+                                <?php
+                                if (strlen($this->cant[$i]) == 2) {
+                                    for ($j = 1; $j <= 5; $j++) {
+                                        if ($j <= substr($this->cant[$i], 0, 1)) {
+                                            ?>
+                                            <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>star_on.png" height='12' title='Categoria' />
+                                        <?php } else { ?>
+                                            <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>star_off.png" height='12' title='Categoria' />
+                                        <?php
+                                        }
+                                    }
+                                } else {
+                                    echo $this->cant[$i];
+                                }
+                                ?>
                             </td>
-                            <td>Child</td>
-                            <td>
-                                <select name="DP_cmbChild_<?php echo $i; ?>" id="DP_cmbChild_<?php echo $i; ?>" onchange="habilitaEdadChild(this.value, <?php echo $i; ?>,'DP_EdadChild')">
-                                    <option value="0">0</option>
-                               <?php if($this->chd1>0){?>
-                                    
-                                    <option value="1">1</option>
-                                <?php } ?>
-                                    <?php if($this->chd2>0 || $this->pf>0){?>
-                                    
-                                    <option value="2">2</option>
-                                <?php } ?>
-                                </select>
-                            </td>
+                            <td style="height: 22px;"><?php echo $this->hab[$i]; ?></td>
+                            <td style="height: 22px;"><?php echo $this->plan[$i]; ?></td>
                         </tr>
-            <tr id="DP_edades_<?php echo $i;?>" <?php if( $this->chd1 == 0 && $this->chd2 == 0 && $this->pf == 0){echo 'style="display:none;"';} ?>>
-                            <td>Edad C1</td>
-                            <td>
-                                <select name ="DP_EdadChild_1_<?php echo $i;?>" id="DP_EdadChild_1_<?php echo $i;?>"disabled="disabled">
-                                    <?php for($x=2;$x<=12;$x++) {?>
-                                    <option value="<?php echo $x;?>"><?php echo $x;?></option>
+    <?php
+    $i++;
+}
+?>
+                </table>
+            </div>
+        </div>
+
+    </div>
+    <input type="hidden" name="hot"value="<?php echo htmlspecialchars(json_encode($this->hot)); ?>">
+    <input type="hidden" name="hab"value="<?php echo htmlspecialchars(json_encode($this->hab)); ?>">
+    <input type="hidden" name="plan"value="<?php echo htmlspecialchars(json_encode($this->plan)); ?>">
+    <input type="hidden" name="cant" value="<?php echo htmlspecialchars(json_encode($this->cant));?>">
+    <div calss ="row">
+        <div class=" col-md-2"></div>
+        <div class=" col-md-8">
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered"  align="center">
+
+                <tr>
+                    <td><span style="padding-left:10px;">Habitaci&oacute;n:</span></td>
+                    <td>
+                        <select name="DP_cmbHab" id="DP_cmbHab" class="form-control" onchange="habitaciones('<?php echo $this->cntP; ?>_DP_tblHab_B', this.value)">
+                            <option value="0">Seleccione</option>
+<?php for ($i = 1; $i <= 3; $i++) { ?>
+                                <option value="<?php echo $i; ?>"><?php echo $i; ?></option>
+<?php } ?>
+                        </select>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td colspan="2">
+
+<?php for ($i = 1; $i <= 3; $i++) { ?>
+                            <div id="<?php echo $this->cntP; ?>_DP_tblHab_B_<?php echo $i; ?>" style="display:none;">
+                                <table width="100%" border="0" cellspacing="0" cellpadding="5">
+                                    <tr><td colspan="4"><b>Habitaci&oacute;n <?php echo $i; ?></b></td></tr>
+                                    <tr>
+                                        <td>Adultos</td>
+                                        <td>
+                                            <select name="DP_cmbAdultos_<?php echo $i; ?>" id="DP_cmbAdultos_<?php echo $i; ?>">
+    <?php for ($x = 1; $x <= 3; $x++) { ?>
+                                                    <option value="<?php echo $x; ?>"><?php echo $x; ?></option>
+    <?php } ?>
+                                            </select>
+                                        </td>
+                                        <td>Child</td>
+                                        <td>
+                                            <select name="DP_cmbChild_<?php echo $i; ?>" id="DP_cmbChild_<?php echo $i; ?>" onchange="habilitaEdadChild(this.value, <?php echo $i; ?>, 'DP_EdadChild')">
+                                                <option value="0">0</option>
+    <?php if ($this->chd1 > 0) { ?>
+
+                                                    <option value="1">1</option>
+    <?php } ?>
+    <?php if ($this->chd2 > 0 || $this->pf > 0) { ?>
+
+                                                    <option value="2">2</option>
                                     <?php } ?>
-                                </select>
-                            </td>
-                            <td>Edad C2</td>
-                            <td>
-                                <select name ="DP_EdadChild_2_<?php echo $i;?>" id="DP_EdadChild_2_<?php echo $i;?>"disabled="disabled">
-                                    <?php for($x=2;$x<=12;$x++) {?>
-                                    <option value="<?php echo $x;?>"><?php echo $x;?></option>
-                                    <?php } ?>
-                                </select>
-                            </td>
-                        </tr>
+                                            </select>
+                                        </td>
+                                    </tr>
+                                    <tr id="DP_edades_<?php echo $i; ?>" <?php
+                                                if ($this->chd1 == 0 && $this->chd2 == 0 && $this->pf == 0) {
+                                                    echo 'style="display:none;"';
+                                                }
+                                                ?>>
+                                        <td>Edad C1</td>
+                                        <td>
+                                            <select name ="DP_EdadChild_1_<?php echo $i; ?>" id="DP_EdadChild_1_<?php echo $i; ?>"disabled="disabled">
+                                                <?php for ($x = 2; $x <= 12; $x++) { ?>
+                                                    <option value="<?php echo $x; ?>"><?php echo $x; ?></option>
+                                                <?php } ?>
+                                            </select>
+                                        </td>
+                                        <td>Edad C2</td>
+                                        <td>
+                                            <select name ="DP_EdadChild_2_<?php echo $i; ?>" id="DP_EdadChild_2_<?php echo $i; ?>"disabled="disabled">
+    <?php for ($x = 2; $x <= 12; $x++) { ?>
+                                                    <option value="<?php echo $x; ?>"><?php echo $x; ?></option>
+    <?php } ?>
+                                            </select>
+                                        </td>
+                                    </tr>
 
 
-                        <!-- <tr>
-                            <td>Infant</td>
-                            <td colspan="3">
-                                <select name="DP_inf_<?php echo $i; ?>" id="DP_inf_<?php echo $i; ?>">
-                                <?php for($x=0; $x<=1; $x++) { ?>                          
-                                    <option value="<?php echo $x; ?>"><?php echo $x; ?></option>
-                                <?php } ?>
-                                </select>
-                            </td>                    	  
-                        </tr> -->
+                                <!-- <tr>
+                                    <td>Infant</td>
+                                    <td colspan="3">
+                                        <select name="DP_inf_<?php echo $i; ?>" id="DP_inf_<?php echo $i; ?>">
+    <?php for ($x = 0; $x <= 1; $x++) { ?>                          
+                                                    <option value="<?php echo $x; ?>"><?php echo $x; ?></option>
+                            <?php } ?>
+                                        </select>
+                                    </td>                    	  
+                                </tr> -->
 
-                    </table>
-                    <hr />
-                </div>      
-            <?php } ?>
-
-
+                                </table>
+                                <hr />
+                            </div>      
+<?php } ?>
 
 
-            </td>
-        </tr>
 
 
-        <tr>
-            <td colspan="2" align="right">
-                <a class="btn btn-primary btn-sm" id="Siguiente" onclick="fadeIn('detallePopup'); Programa.prototype.procesoDetallePasajeros('frmDetalleReserva_1_<?php echo $this->cntP; ?>', '<?php echo BASE_URL; ?>programas/detallePasajeros', 'Siguiente', 'divPopupIn','<?php echo $this->form;?>');"> Siguiente </a>
-            </td>
-        </tr>
-    </table>
+                    </td>
+                </tr>
+
+
+                <tr>
+                    <td colspan="2" align="right">
+                        <a class="btn btn-primary btn-sm" id="Siguiente" onclick="fadeIn('detallePopup');
+                                Programa.prototype.procesoDetallePasajeros('frmDetalleReserva_1_<?php echo $this->cntP; ?>', '<?php echo BASE_URL; ?>programas/detallePasajeros', 'Siguiente', 'divPopupIn', '<?php echo $this->form; ?>');"> Siguiente </a>
+                    </td>
+                </tr>
+            </table>
+
+        </div>
+    </div>
 </form>
