--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -27,10 +27,10 @@
             
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 
-                
-                <div class="modal-content" id="detallePopup" style="position: fixed; left: 200px; top:10%; bottom: 10%; right: 210px; z-index: 9999; display: none;">
+                <div id="detalleFixed" style=" position: fixed; width: 100%; height: 100%; z-index: 9999; display: none;">
+                <div class="modal-content" id="detallePopup" style=" position : absolute; left: 15%;  bottom: 6%; top:6%; right: 16%; z-index: 9999;width: 70%; display: none;">
                     <div class="modal-header">
-                        <button type="button" class="close" id="btnCerrarIn" style="display:block" onclick="fadeOut('detallePopup');">&times;</button>
+                        <button type="button" class="close" id="btnCerrarIn" style="display:block" onclick="fadeOut('detallePopup');fadeOut('detalleFixed');">&times;</button>
                         <h4 class="modal-title" id="tituloPopup">Detalle</h4>
                     </div>
 
@@ -39,6 +39,7 @@
                     </div>
 
                 </div>
+                </div>
                 
                 <div class="modal-content" id="condicionesPopup" style="position: fixed; left: 200px; top:10%; bottom: 10%; right: 210px; z-index: 9999; display: none;">
                     <div class="modal-header">
@@ -46,7 +47,7 @@
                         <h4 class="modal-title" id="tituloPopup">Condiciones</h4>
                     </div>
 
-                    <div class="modal-body" id="divPopupCon" style="max-height: 500px;  overflow-y: scroll;">
+                    <div class="modal-body" id="divPopupCon" style="min-height: 500px;  overflow-y: scroll;">
                         
                         
                     </div>
