se agrega validacion para modal de login desde el sitio

--- a/views/error/access.phtml
+++ b/views/error/access.phtml
@@ -1,6 +1,7 @@
 <h2><?php if($this->mensaje) echo $this->mensaje; ?></h2>
 
 <p>&nbsp;</p>
-
+<?php if(!Session::get('sess_codigo_cliente_url')){?>
 <a href="javascript:history.back()" >Volver ala pagina anterior</a> | 
 <a href="<?php echo BASE_URL; ?>" >Volver al inicio</a>
+<?php } ?>
