Agregando scroll solamente al popover de las condiciones

--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -21,14 +21,14 @@ $(function ()
 });
 </script>
 <style>
-.popover{
+a .popover{
     max-width: 90%; /* Max Width of the popover (depending on the container!) */
     margin-left: -5%;
 }
-.popover-content {
+td > div > div.popover-content{
   height: 350px;
   overflow-y: scroll;
- }
+}
 </style>
 <form enctype="multipart/form-data" class="frmReservaPRG">
     <div class="panel panel-info">
