Quitando etiqueta sobrante

--- a/views/bloqueos/centerBox/reservarPrograma.phtml
+++ b/views/bloqueos/centerBox/reservarPrograma.phtml
@@ -33,7 +33,7 @@ td > div > div.popover-content{
 <form enctype="multipart/form-data" class="frmReservaPRG">
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h4>Detalle programa</b></h4>
+            <h4>Detalle programa</h4>
         </div>
         <div class="panel-body">
             <div class="row">
