--- a/views/system/index.phtml
+++ b/views/system/index.phtml
@@ -51,87 +51,7 @@
                                         <center>
                                             
                                             <!-- SLIDER -->
-                                            <div id="HomePageSlider_Contenedor" style="float: none;" >
-                                                <div class="HomeMiSlideShow" id="HomePageSlider" >
-                                                    <!-- <div class="HomePageSlider_SlideBox EsquinasRedondas" style="background-image:url(http://graficos.euroandino.net/bannersV1/241.jpg)">
-                                                        <div>
-                                                            <a href="http://www.euroandino.cl/cgi-bin/bannersV1.cgi?id=241" rel="external"  class="HomePageSlider_Slide_ZonaClick"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="HomePageSlider_SlideBox EsquinasRedondas" style="background-image:url(http://graficos.euroandino.net/bannersV1/238.jpg)">
-                                                        <div>
-                                                            <a href="http://www.euroandino.cl/cgi-bin/bannersV1.cgi?id=238" rel="external"  class="HomePageSlider_Slide_ZonaClick"></a>
-                                                        </div>
-                                                    </div>
-                                                    <div class="HomePageSlider_SlideBox EsquinasRedondas" style="background-image:url(http://graficos.euroandino.net/bannersV1/235.jpg)">
-                                                        <div>
-                                                            <a href="http://www.euroandino.cl/cgi-bin/bannersV1.cgi?id=235"  class="HomePageSlider_Slide_ZonaClick"></a>
-                                                        </div>
-                                                    </div> -->
-                                                    
-                                                    <div class="HomePageSlider_SlideBox  EsquinasRedondas" style="background-image:url(http://www.panamericanaturismo.cl/newsite/img_banner_online/01.jpg)">
-                                                        <a href="viajes_sin_avion/5-1-Caribe.html" class="HomePageSlider_Slide_ZonaClick">
-                                                            <div class="HomePageSlider_Zonas">
-                                                                <h1 class="HomeSliderH1">Muchas opciones de viaje.</h1>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-
-                                                    <div class="HomePageSlider_SlideBox  EsquinasRedondas" style="background-image:url(http://www.panamericanaturismo.cl/newsite/img_banner_online/02.jpg)">
-                                                        <a href="viajes_sin_avion/2-1-America_del_Norte.html" class="HomePageSlider_Slide_ZonaClick">
-                                                            <div class="HomePageSlider_Zonas">
-                                                                <h1 class="HomeSliderH1">Muchas opciones de viaje.</h1>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-
-                                                    <div class="HomePageSlider_SlideBox  EsquinasRedondas" style="background-image:url(http://www.panamericanaturismo.cl/newsite/img_banner_online/03.jpg)">
-                                                        <a href="viajes_sin_avion/3-1-Centroamerica.html" class="HomePageSlider_Slide_ZonaClick">
-                                                            <div class="HomePageSlider_Zonas">
-                                                                <h1 class="HomeSliderH1">Muchas opciones de viaje.</h1>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-
-                                                    <div class="HomePageSlider_SlideBox  EsquinasRedondas" style="background-image:url(http://www.panamericanaturismo.cl/newsite/img_banner_online/04.jpg)">
-                                                        <a href="viajes_sin_avion/7-1-Europa.html" class="HomePageSlider_Slide_ZonaClick">
-                                                            <div class="HomePageSlider_Zonas">
-                                                                <h1 class="HomeSliderH1">Muchas opciones de viaje.</h1>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-
-                                                    <!--
-                                                    <div class="HomePageSlider_SlideBox  EsquinasRedondas" style="background-image:url(http://www.euroandino.cl/gfx/home_page/slide_idzona_1_2.jpg)">
-                                                        <a href="viajes_sin_avion/1-1-Chile.html" class="HomePageSlider_Slide_ZonaClick">
-                                                            <div class="HomePageSlider_Zonas">
-                                                                <h1 class="HomeSliderH1">5 opciones de viaje.</h1>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-
-                                                    <div class="HomePageSlider_SlideBox  EsquinasRedondas" style="background-image:url(http://www.euroandino.cl/gfx/home_page/slide_idzona_4_4.jpg)">
-                                                        <a href="viajes_sin_avion/4-1-Sudamerica_exepto_Chile.html" class="HomePageSlider_Slide_ZonaClick">
-                                                            <div class="HomePageSlider_Zonas">
-                                                                <h1 class="HomeSliderH1">55 opciones de viaje.</h1>
-                                                            </div>
-                                                        </a>
-                                                    </div>
-
-                                                    <div class="HomePageSlider_SlideBox  EsquinasRedondas" style="background-image:url(http://www.euroandino.cl/gfx/home_page/slide_idzona_9_3.jpg)">
-                                                        <a href="viajes_sin_avion/9-1-Medio_Oriente.html" class="HomePageSlider_Slide_ZonaClick">
-                                                            <div class="HomePageSlider_Zonas">
-                                                                <h1 class="HomeSliderH1">3 opciones de viaje.</h1>
-                                                            </div>
-                                                        </a>
-                                                    </div> -->
-                                                    
-                                                    <div class="cycle-pager" style="top: 5px; height: 60px;"></div>
-                                                        
-                                                </div>
-
-                                                
-                                            </div>
+                                            <iframe src="http://www.panamericanaturismo.cl/newsite/main_campanas_frame.asp" frameborder="0" width="750" height="320" scrolling="no"></iframe>
                                             <!-- END: SLIDER -->
                                             
                                         </center>
